fix spacing

--- a/src/components/Bookcard.css
+++ b/src/components/Bookcard.css
@@ -59,7 +59,7 @@
   }
 
   #bc-3 {
-    margin-top: -420px;
+    margin-top: -360px;
   }
 
   #bc-4 {
@@ -81,6 +81,33 @@
 
 /* // X-Large devices (large desktops, 1200px and up) */
 @media (min-width: 1200px) {
+  #bc-1 {
+    margin-top: 10px;
+  }
+
+  #bc-2 {
+    margin-top: 220px;
+  }
+
+  #bc-3 {
+    margin-top: -390px;
+  }
+
+  #bc-4 {
+    margin-top: -5px;
+  }
+
+  #bc-5 {
+    margin-top: -250px;
+  }
+
+  #bc-6 {
+    margin-top: -10px;
+  }
+
+  #bc-7 {
+    margin-top: -280px;
+  }
 }
 
 /* // XX-Large devices (larger desktops, 1400px and up) */
